Update base image to Java 8