@@ -1,4 +1,4 @@
-FROM java:7
+FROM openjdk:8
 
 ARG SPIGOT_REV=latest
 
@@ -17,4 +17,4 @@ VOLUME /data
 EXPOSE 25565
 
 WORKDIR /data
-CMD ["java", "-Xms512M", "-Xmx1536M", "-XX:MaxPermSize=128M", "-jar", "/minecraft/spigot.jar", "--noconsole"]
+CMD ["java", "-Xms512M", "-Xmx1536M", "-XX:+UseConcMarkSweepGC", "-jar", "/minecraft/spigot.jar", "--noconsole"]
